# ChangeLog for mail-mta/postfix
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-mta/postfix/ChangeLog,v 1.270 2011/07/07 12:46:09 eras Exp $

*postfix-2.8.4 (07 Jul 2011)

  07 Jul 2011; Eray Aslan <eras@gentoo.org> -postfix-2.8.4_rc1.ebuild,
  +postfix-2.8.4.ebuild:
  version bump

*postfix-2.8.4_rc1 (18 Jun 2011)

  18 Jun 2011; Eray Aslan <eras@gentoo.org> +postfix-2.8.4_rc1.ebuild:
  version bump

*postfix-2.9_pre20110615 (16 Jun 2011)

  16 Jun 2011; Eray Aslan <eras@gentoo.org> -postfix-2.9_pre20110605.ebuild,
  +postfix-2.9_pre20110615.ebuild:
  Version bump

*postfix-2.9_pre20110605 (15 Jun 2011)

  15 Jun 2011; Eray Aslan <eras@gentoo.org> +postfix-2.9_pre20110605.ebuild,
  +files/postfix.rc6.2.6:
  Version bump. Add multi instance support.

*postfix-2.8.3-r2 (14 Jun 2011)

  14 Jun 2011; Eray Aslan <eras@gentoo.org> +postfix-2.8.3-r2.ebuild:
  VDA patch bump. Tidy up conf directory.

*postfix-2.8.3-r1 (13 Jun 2011)

  13 Jun 2011; Eray Aslan <eras@gentoo.org> +postfix-2.8.3-r1.ebuild:
  sh and s390 dropped - bug #371379. Hopefully fix bug #349944

  15 May 2011; Eray Aslan <eras@gentoo.org> postfix-2.7.4.ebuild,
  postfix-2.8.3.ebuild:
  Block against mail-mta/msmtp[mta] - bug #367255

  15 May 2011; Eray Aslan <eras@gentoo.org> -postfix-2.7.3-r1.ebuild,
  -postfix-2.8.1-r1.ebuild, -postfix-2.8.2.ebuild, -postfix-2.8.2-r1.ebuild:
  Remove vulnerable versions - bug #366605

  15 May 2011; Kacper Kowalik <xarthisius@gentoo.org> postfix-2.8.3.ebuild:
  Marked ~ppc64 wrt #366525

  14 May 2011; Raúl Porcel <armin76@gentoo.org> postfix-2.7.4.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #366605

  14 May 2011; Kacper Kowalik <xarthisius@gentoo.org> postfix-2.7.4.ebuild:
  ppc/ppc64 stable wrt #366605

  15 May 2011; Eray Aslan <eras@gentoo.org> -postfix-2.7.3-r1.ebuild,
  -postfix-2.8.1-r1.ebuild, -postfix-2.8.2.ebuild, -postfix-2.8.2-r1.ebuild:
  Remove vulnerable versions - bug 366605
